hamburger visibility fixed

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -27,6 +27,7 @@
 
     .bar {
         display: block;
+        visibility: visible;
     }
 
     /* banner styles */
@@ -316,6 +317,7 @@
 
     .bar {
         display: block;
+        visibility: visible;
     }
 
     /* banner styles */
